<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:gravity="center"
        android:textSize="40dp"
        android:text="@string/text_register_tittle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/img_register" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/text_register_description"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEmailReg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="Email" />

        <EditText
            android:id="@+id/editEmailReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPassReg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="Contraseña" />

        <EditText
            android:id="@+id/editPassReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ConfirmReg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="Confirmar" />

        <EditText
            android:id="@+id/editConfirmReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegisterReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_registrar" />

        <Space
            android:layout_width="53dp"
            android:layout_height="65dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnRegisterback"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_back" />
    </LinearLayout>
</LinearLayout>